Added the standardized data to repository

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	
 	<nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light site-navbar-target" id="ftco-navbar">
 		<div class="container">
-			<a class="navbar-brand" href="index.html">Mohd Hashir Sheikh<span>.</span></a>
+			<a class="navbar-brand" href="https://hashir-sheikh-da.github.io/">Mohd Hashir Sheikh<span>.</span></a>
 			<button class="navbar-toggler js-fh5co-nav-toggle fh5co-nav-toggle" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="oi oi-menu"></span> Menu
 			</button>
@@ -55,7 +55,7 @@
 							<div class="text">
 								<span class="subheading">Hello! This is Mohd Hashir Sheikh</span>
 								<h1 class="mb-4 mt-3">Data Analyst Enthusiast <span></span> &amp; Problem Solver</h1>
-								<p><a href="#contact-section" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download Resume</a></p>
+								<p><a href="#contact-section" class="btn btn-primary">Hire me</a> <a href="https://drive.google.com/file/d/1tSSFyXdb4O4JK20SOd10cbMD0XJA18Hd/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-outline-primary">Download Resume</a></p>
 							</div>
 						</div>
 					</div>
@@ -74,7 +74,7 @@
 							<div class="text">
 								<span class="subheading">Turning Data into Actionable Insights</span>
 								<h1 class="mb-4 mt-3">Hi, I am <span>Mohd Hashir Sheikh</span> Transforming Data into Strategic Solutions with Expertise in Python, SQL, and Power BI</h1>
-								<p><a href="#contact-section" class="btn btn-primary">Hire me</a> <a href="#" class="btn btn-primary btn-outline-primary">Download Resume</a></p>
+								<p><a href="#contact-section" class="btn btn-primary">Hire me</a> <a href="https://drive.google.com/file/d/1tSSFyXdb4O4JK20SOd10cbMD0XJA18Hd/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn btn-primary btn-outline-primary">Download Resume</a></p>
 							</div>
 						</div>
 					</div>
