--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 							<span class="flaticon-vector"></span>
 						</div>
 						<div class="text">
-							<strong class="number" data-number="2200">0</strong>
+							<strong class="number" data-number="2000">0</strong>
 							<span>Hours of Learning</span>
 						</div>
 					</div>
@@ -155,10 +155,10 @@
 								<ul class="about-info mt-4 px-md-0 px-2">
 									<li class="d-flex"><span>Name:</span> <span>Mohd Hashir Sheikh</span></li>
 									<li class="d-flex"><span>Address:</span> <span>New Delhi, Delhi</span></li>
-									<li class="d-flex"><span>Email:</span> <span>hashirsheikh311022@gmail.com</span></li>
+									<li class="d-flex"><span>Email:</span> <span><a href="mailto:hashirsheikh311022@gmail.com">hashirsheikh311022@gmail.com</a></span></li>
 									<!-- <li class="d-flex"><span>Phone: </span> <span>+91-1234567890</span></li> -->
-									<li class="d-flex"><span>LinkedIn:</span> <span>www.linkedin.com/in/hashir-sheikh</span></li>
-									<li class="d-flex"><span>GitHub:</span> <span>https://github.com/hashir-sheikh-da</span></li>
+									<li class="d-flex"><span>LinkedIn:</span> <span><a href="https://www.linkedin.com/in/hashir-sheikh" target="_blank">hashir-sheikh</a></span></li>
+									<li class="d-flex"><span>GitHub:</span> <span><a href="https://github.com/hashir-sheikh-da" target="_blank">hashir-sheikh-da</a></span></li>
 								</ul>
 							</div>
 							<div class="col-md-12">
